@@ -1,3 +1,11 @@
+2008-07-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>
+
+	Merge from HEAD:
+
+	* xs/GtkWidget.xs: Document some aspects of Gtk2::Widget::activate
+	and set_scroll_adjustments that are relevant to Perl subclasses.
+	Patch by Kevin Ryde.
+
 2008-06-22  Torsten Schoenfeld  <kaffeetisch@gmx.de>
 
 	Merge from HEAD:
